# corrupt-mnist

./: .claude_instructions  .env.example  .gcloudignore  .gitignore  INVOKE_GUIDE.md  LICENSE  README.md  TODO.md  cloudbuild.yaml  config.yaml  data.dvc  evaluate.dockerfile  mkdocs.yml  models.dvc  pyproject.toml  tasks.py  train.dockerfile
.dvc/: config
.github/workflows/: codecheck.yaml  tests.yaml
configs/: model_conf.yaml  training_conf.yaml
docs/: index.md
notebooks/: 2_Neural_Networks_in_PyTorch.ipynb  3_Training_Neural_Networks.ipynb
src/corrupt_mnist/: data.py  download_data.py  evaluate.py  model.py  py.typed  train.py
tests/: test_data.py  test_model.py
